--- a/this-app/src/App.css
+++ b/this-app/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  background-color: #6e6e6e;
 }
 
 .App-logo {
@@ -14,7 +15,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #6e6e6e;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
