--- a/src/card-list/card-list.scss
+++ b/src/card-list/card-list.scss
@@ -5,3 +5,9 @@
   grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-gap: 20px;
 }
+
+.details-button {
+  background-color: rgb(39, 107, 233);
+  border-radius: 10%;
+  padding: 0 10px;
+}
